styles/tasks.css
.tasks-table {
  width: 100%;
}

.tasks-table__head {
  display: none;
}

.tasks-table__body {
  display: grid;
  justify-content: center;
  justify-items: center;
  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  gap: 1.5rem;
}

.tasks-table-row {
  display: flex;
  flex-direction: column;
  border-radius: 15px;
  border: var(--BORDER);
}

.tasks-table-row__data {
  display: grid;
  grid-template-columns: 1fr 4fr;
  gap: 0.5rem;
  border-bottom: var(--BORDER);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  justify-content: center;
  align-content: center;
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-MEDIUM);
  line-height: var(--LH-NORMAL);
}

.tasks-table-row__data::before {
  content: attr(data-label);
  color: var(--LIGHT-GRAY-COLOR);
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-REGULAR);
  line-height: var(--LH-NORMAL);
}

.tasks-table-row__data:last-child {
  border-bottom: none;
}

.task__name {
  border-bottom: var(--BORDER);
  padding-inline: 0.75rem;
  padding-block: 0.5rem;
  font-size: var(--TEXT-LG);
  font-weight: var(--FW-REGULAR);
  line-height: var(--LH-TIGHT);
}

.task__priority {
  display: flex;
  align-items: center;
}

.task__status--open {
  color: #ff5964;
}

.task__status--in-progress {
  color: #e3b505;
}

.task__status--done {
  color: #7bc950;
}

.paginator {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.paginator__button {
  width: 2rem;
  height: 2rem;
  border-radius: 13px;
  border: var(--BORDER);
  background: none;
  color: var(--FG-COLOR);
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-SEMIBOLD);
  line-height: var(--LH-NORMAL);
}

.paginator__button:hover {
  cursor: pointer;
}

.paginator__button--active {
  color: var(--RED-CONTRAST-COLOR);
}

@media screen and (min-width: 426px) {
  .search__input {
    max-width: 7rem;
  }
}

@media screen and (min-width: 592px) {
  .filter-button__text {
    display: block;
  }
}

@media screen and (min-width: 1025px) {
  .tasks-table {
    border: var(--BORDER);
    border-radius: 15px;
  }

  .tasks-table__head {
    display: table-header-group;
  }

  .tasks-table__body {
    display: table-row-group;
  }

  .tasks-table-row {
    display: table-row;
    border-right: var(--BORDER);
    border-bottom: var(--BORDER);
  }

  .tasks-table-row:last-child {
    border-bottom: none;
  }

  .tasks-table-row__header {
    font-size: 1.5rem;
    font-weight: 500;
    padding-inline: 0.75rem;
    padding-block: 0.5rem;
    text-align: start;
    border-bottom: var(--BORDER);
    border-right: var(--BORDER);
  }

  .tasks-table-row__header:last-child {
    border-right: none;
  }

  .tasks-table-row__data {
    font-size: var(--TEXT-MD);
    display: table-cell;
    border-bottom: inherit;
    border-right: inherit;
    font-weight: 400;
  }

  .tasks-table-row__data::before {
    display: none;
  }

  .tasks-table-row__data:last-child {
    border-right: none;
    border-bottom: inherit;
  }

  .task__name {
    font-size: var(--TEXT-MD);
    font-weight: 400;
    border-right: inherit;
    border-bottom: inherit;
  }
}

